--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0"
+        "php": "^7.4|^8.0",
+        "league/flysystem": "^2.3",
+        "microsoft/microsoft-graph": "^1.39"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
