--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "league/flysystem": "^2.3",
-        "microsoft/microsoft-graph": "^1.39"
+        "league/flysystem": "^1.1",
+        "microsoft/microsoft-graph": "^1.39",
+        "phpspec/prophecy-phpunit": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
