--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
+        "ext-json": "*",
         "league/flysystem": "^1.1",
         "microsoft/microsoft-graph": "^1.39",
-        "phpspec/prophecy-phpunit": "^2.0"
+        "phpspec/prophecy-phpunit": "^2.0",
+        "psr/log": "^2.0|^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
