--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.1",
         "ext-json": "*",
-        "league/flysystem": "^1.1",
+        "league/flysystem": "^3.0",
         "microsoft/microsoft-graph": "^1.39",
         "phpspec/prophecy-phpunit": "^2.0",
         "psr/log": "^2.0|^3.0"
